# fc

./: .QualityGate  .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  README.md  README.rst  SCR-fc.txt  about.py  client_requirements.txt  docker-compose.yaml  fc.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
ci/: black.sh  docker.sh  package.sh  publish_docker.sh  pylint.sh  pytest.sh  setup.sh
config/: sample_cfg.yaml
core/: api_svr.py  config.py  coordinator.py  decorators.py  logger.py  plugin.py
core/data/: logger.conf
doc/: conf.py  configuration.rst  index.rst  overview.rst  quickstart.rst  support.rst  usage.rst
doc/css/: css-style.css
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
docker/fc/: docker-compose.yaml
docker/fc_client/: Dockerfile  fc-client
docker/fc_guarder/: Dockerfile  docker-compose.yaml  entrypoint.sh  sample.env
docker/fc_server/: Dockerfile  docker-compose.yaml  entrypoint.sh
docker/patches/: jobs.py
fc_client/: client.py  sample_client.env
fc_client_daemon/: client_daemon.py
fc_client_docker/: __init__.py  fc_client_docker
fc_common/: __init__.py  about.py  config.py  etcd.py  logger.py  version.py
fc_guarder/: guarder.py
fc_server/: fc.py  server.py
fc_server/config/: sample_cfg.yaml  sample_lavacli.yaml  sample_resource.yaml
fc_server_daemon/: server_daemon.py
management/: cmd_online_lava_devices.py  common.py
plugins/: labgrid.py  lava.py
requirements/: ci-requirements.txt  client-requirements.txt  server-requirements.txt
tests/: conftest.py
(+23 files in other folders)
