[metadata]
author = Larry Shen
author_email = larry.shen@nxp.com
license = MIT
url = https://fc.readthedocs.io/
version = attr: fc_common.version.get_package_version
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6
